2005-09-23  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* cpprules.in:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/dummylib/Makefile.am:
	* hw/xfree86/os-support/.cvsignore:
	* hw/xfree86/os-support/Makefile.am:
	* hw/xfree86/scanpci/Makefile.am:
	* hw/xfree86/utils/Makefile.am:
	* hw/xfree86/utils/scanpci/Makefile.am:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	* hw/xfree86/utils/xorgconfig/Makefile.am:
	Add scanpci, xorgcfg, & xorgconfig utilities.

2005-09-21  Kristian Høgsberg  <krh@redhat.com>

	* configure.ac: Accept --with-xkb-output argument to specify
	output dir for compiled xkb keymaps.  Define XKM_OUTPUT_DIR and
	XKB_BIN_DIRECTORY.

	* include/xkb-config.h.in: Add XKM_OUTPUT_DIR and XKB_BIN_DIRECTORY.

	* xkb/Makefile.am (AM_CFLAGS): Add XKB_CFLAGS.

2005-09-20  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/Makefile.am:
	Bug #4487: Add the bsd subdir to DIST_SUBDIRS. (Joshua Baergen)

2005-09-20  Adam Jackson  <ajax@freedesktop.org>

	* cfb/Makefile.am:
	* cfb/Makefile.am.inc:
	Bug #4257: Move cfbcmap.c to cfb_common_sources.

2005-09-20  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/Makefile.am (install-exec-local): 
	* configure.ac:
	Add --disable-install-setuid option so you can build as non-root
	and chown/chmod later.   Also disable by default on platforms that
	don't need setuid root X servers (Darwin & SPARC's, according to
	InstallXserverSetUID settings in the old Imake config files).

2005-09-19  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* hw/xfree86/os-support/bus/Makefile.am: 
	* hw/xfree86/os-support/linux/Makefile.am:
	Linux/Alpha support (Stefaan De Roeck)

2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	Bug #3990: Require glproto in the cases that it's necessary (DRI or DMX
	with GLX).  (spyderous)

2005-09-14  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/Makefile.am:
	Bug #4046: Install the X.Org server setuid root. (David Schleef)
